# patQL

./: Cargo.toml  README.md
patql-engine/: Cargo.toml
patql-engine/src/: lib.rs  object.rs  unify.rs
patql-ir/: Cargo.toml
patql-parse/: Cargo.toml
patql-parse/src/: ast.rs  check.rs  lib.rs  parse.rs  token.rs  visitor.rs
patql-test/: Cargo.toml
src/: ast.rs  evaluation.rs  exp.rs  instantiation.rs  lib.rs  main.rs  parse.rs  qeval.rs  unification.rs  unify.rs
src/cli/: args.rs  mod.rs  preload.rs  repl.rs
src/parse/: grammar.rs  mod.rs
