[package]
name = "pat_ql"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
bumpalo = "3.2.0"
psc = { git = "https://github.com/TOETOE55/psc.git" }
structopt = "0.3.11"