[package]
name = "patql-parse"
version = "0.1.0"
authors = ["Xyzt Toe <584605539@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
lens-rs = "0.3.2"
unicode-width = "0.1"
unicode-segmentation = "1.7"
unicode-normalization = "0.1"
anyhow = "1.0"

[package.metadata.inwelling]
lens-rs_generator = true